@@ -1,5 +1,10 @@
 # $Id$
 
+2007-10-04	Ivan Y. Khvostishkov
+
+	* core/Form/Primitives/PrimitiveForm.class.php: primitive for creating
+	structured forms with the help of DTO classess (coming soon).
+
 2007-10-02	Ivan Y. Khvostishkov
 
 	* main/Utils/TextUtils.class.php: added friendlyNumber() for
